completed the map source files in the basiocs module